# recode-scenario

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  finetune_model.ipynb  generate_clinical_reports.ipynb  generate_clinical_reports_from_mistral_api.ipynb  generate_reports_from_french_pmsi_scenarios.ipynb  generate_reports_from_french_pmsi_scenarios_dev.ipynb  generate_scenarios_2000_20250827.ipynb  generate_scenarios_v2.ipynb  generate_scenarios_v2_test.ipynb  generate_scenarios_v3.ipynb  generate_scenarios_v4.ipynb  generation_usable_icd_index_entries.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  scenario-oncology.ipynb  scenario_oncology.ipynb  scenario_oncology_v2.ipynb  test.csv  test_generation_v1.csv  test_generation_v1_response.csv  test_generation_v2.csv  test_generation_v2_response.csv  utils.py  utils_v2.py
.ipynb_checkpoints/: README-checkpoint.md  generate_reports_from_french_pmsi_scenarios-checkpoint.ipynb  utils-checkpoint.py
arXiv/: finetune_model.ipynb  generate_clinical_reports_from_mistral_api.ipynb  generate_reports_from_french_pmsi_scenarios_dev.ipynb  generate_scenarios_1000_cancer_20250827.ipynb  generate_scenarios_v2.ipynb  generate_scenarios_v3.ipynb  prepare_training_data_v1.ipynb  rename_files.ipynb  scenario_oncology_v2.ipynb  utils.py
config/: default.yaml
docs/: architecture.md  dev_guide.md  docker.md
referentials/: Actes_CCAM.xlsx  Affections chroniques.xlsx  Tableau récapitulatif traitement cancer.xlsx  attention_artificial_openings_external_prosthetic_device.csv  chu  cim_2024.xlsx  cma.csv  exclusions  icd_code_chronic_attack.txt  icd_codes_cardic_vascular_implants.csv  icd_codes_chronic_attack.csv  icd_codes_diabetes_chronic.csv  icd_codes_family_history.csv  icd_codes_iron_deficiency_anemia.csv  icd_codes_ivg.csv  icd_codes_legal_abortion.csv  icd_codes_liveborn_infants.csv  icd_codes_medical_abortion.csv  icd_codes_overnight_study.csv  icd_codes_preoperative_assessment.csv  icd_codes_prophylactic_intervention.csv  icd_codes_supervision.csv  icd_codes_supervision_chronic_disease.csv  icd_codes_supervision_post_partum.csv  icd_codes_surgical_followup.csv  icd_primary_exclusions.csv  intro_chapitre_XXI_cim10.txt  procedure_botulic_toxine.csv  stat_racines.xlsx
results/: batch0.jsonl  batch1.jsonl  batch2.jsonl  batch3.jsonl  data_10000_20280827.csv  data_20250901_1113.csv  data_20250901_1123.csv  generated_scenarios_20250918_1017.csv  generated_scenarios_20250921_1747.csv  generated_scenarios_20250921_1755.csv  generated_scenarios_20250921_1835.csv  generated_scenarios_20250922_1207.csv  (+3 more)
(+151 files in other folders)
